tests/baselines/reference/ES3For-ofTypeCheck4.errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
ES3For-ofTypeCheck4.ts(2,17): error TS2494: Using a string in a 'for...of' statement is only supported in ECMAScript 5 and higher.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== ES3For-ofTypeCheck4.ts (1 errors) ====
    var union: string | string[];
    for (const v of union) { }
                    ~~~~~
!!! error TS2494: Using a string in a 'for...of' statement is only supported in ECMAScript 5 and higher.